# DivergenceFreeInterpolation

./: .gitignore  DivergenceFreeInterpolant.py  LICENSE  README.md  RadialBasisFunctions.py  ScalarFieldInterpolant.py  Thinning.py  pyproject.toml  requirements.txt  residual_correction_scheme.py  setup.cfg  setup.py  test_case.py  test_case_2D.py  test_case_3D.py  test_case_grid.py  test_case_random.py  thin_zone.py
.run/: build.run.xml
Divergence_Free_Interpolant/: CMakeLists.txt  Divergence_Free_Interpolant.cpp  Radial_Basis_Functions.py  _Divergence_Free_interpolant.py  _Radial_Basis_Functions.py  __init__.py
examples/: test3D.py  test_case_2D.py  test_case_3D.py
src/: CMakeLists.txt  Divergence_Free_Interpolant.cpp  Divergence_Free_interpolant.py  RBF_kernel.py  RBF_kernel_code_genrator.py  Radial_Basis_Functions.py  test.py
src/tests/: Radial_Basis_Functions_Test.py
tests/: test3D.py  test_case_2D.py  test_case_3D.py
