[metadata]
name = Divergence_Free_Interpolant
version = 0.1
author = Peteris Zvejnieks
author_email = peterf610@gmail.com
description = Divergence free interpolant for 2D and 3D systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Peteris-Zvejnieks/DivergenceFreeInterpolation
project_urls =
    Bug Tracker = https://github.com/Peteris-Zvejnieks/DivergenceFreeInterpolation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = Divergence_Free_Interpolant
packages = find:
python_requires = >=3.6

[options.packages.find]
where = Divergence_Free_Interpolant